--- a/pages/index.html
+++ b/pages/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OhMyFood!</title>
+    <title>OhMyFood! - Accueil</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <div>Hello</div>
+    <div class="pre-load">
+        <div class="loader">
+            <div class="circle"></div>
+            <div class="circle circle2"></div>
+            <div class="circle circle3"></div>
+            <div class="circle circle4"></div>
+            <div class="circle circle5"></div>
+            <div class="text">Loading...</div>
+        </div>
+    </div>
+    <nav class="navbar">
+        <div class="navbar__brand">OhMyFood</div>
+    </nav>
+    <div class="location">
+        <i class="fa-solid fa-location-dot"></i>
+        Paris, Belleville
+    </div>
 </body>
 </html>
