3rd Commit - Order_menu
Added the order menu, and do the button with the hover

--- a/pages/index.html
+++ b/pages/index.html
@@ -19,12 +19,19 @@
             <div class="text">Loading...</div>
         </div>
     </div>
-    <nav class="navbar">
-        <div class="navbar__brand">OhMyFood</div>
-    </nav>
-    <div class="location">
-        <i class="fa-solid fa-location-dot"></i>
-        Paris, Belleville
-    </div>
+    <main class="mainpage">
+        <nav class="navbar">
+            <div class="navbar__brand">OhMyFood</div>
+        </nav>
+        <div class="location">
+            <i class="fa-solid fa-location-dot"></i>
+            Paris, Belleville
+        </div>
+        <div class="order_menu">
+            <h1 class="order_menu--title">Réservez le menu qui vous convient</h1>
+            <h3 class="order_menu--secondTitle">Découvrez des restaurants d'exception, séléctionnés par nos soins.</h3>
+            <button class="btn">Explorez nos restaurants</button>
+        </div>
+    </main>
 </body>
 </html>
