4rd Commit - Steps
Steps section added

--- a/pages/index.html
+++ b/pages/index.html
@@ -32,6 +32,12 @@
             <h3 class="order_menu--secondTitle">Découvrez des restaurants d'exception, séléctionnés par nos soins.</h3>
             <button class="btn">Explorez nos restaurants</button>
         </div>
+        <div class="steps">
+            <h2 class="steps--title">Fonctionnement</h2>
+            <div class="step"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</div>
+            <div class="step"><i class="fa-solid fa-list"></i>Composez votre menu</div>
+            <div class="step"><i class="fa-solid fa-store"></i>Dégustez au restaurant</div>
+        </div>
     </main>
 </body>
 </html>
