--- a/pages/index.html
+++ b/pages/index.html
@@ -38,6 +38,71 @@
             <div class="step"><i class="fa-solid fa-list"></i>Composez votre menu</div>
             <div class="step"><i class="fa-solid fa-store"></i>Dégustez au restaurant</div>
         </div>
+        <div class="restaurants">
+            <h2 class="restaurants--title">
+                Restaurants
+            </h2>
+            <div class="card new">
+                <a href="">
+                <img src="../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du Goût">
+                <div class="card__footer">
+                    <div class="card__description">
+                        <h3 class="card__description--title">La palette du goût</h3>
+                        <p class="card__description--info">Ménilmontant</p>
+                    </div>
+                </a>
+                    <div class="card__like">
+                        <i class="fa-regular fa-heart empty"></i>
+                        <i class="fa-solid fa-heart full"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="card new">
+                <a href="">
+                <img src="../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                <div class="card__footer">
+                    <div class="card__description">
+                        <h3 class="card__description--title">La note enchantée</h3>
+                        <p class="card__description--info">Charonne</p>
+                    </div>
+                </a>
+                    <div class="card__like">
+                        <i class="fa-regular fa-heart empty"></i>
+                        <i class="fa-solid fa-heart full"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <a href="">
+                <img src="../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                <div class="card__footer">
+                    <div class="card__description">
+                        <h3 class="card__description--title">À la française</h3>
+                        <p class="card__description--info">Cité Rouge</p>
+                    </div>
+                </a>
+                    <div class="card__like">
+                        <i class="fa-regular fa-heart empty"></i>
+                        <i class="fa-solid fa-heart full"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <a href="">
+                <img src="../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                <div class="card__footer">
+                    <div class="card__description">
+                        <h3 class="card__description--title">Le délice des sens</h3>
+                        <p class="card__description--info">Folie-Méricourt</p>
+                    </div>
+                </a>
+                    <div class="card__like">
+                        <i class="fa-regular fa-heart empty"></i>
+                        <i class="fa-solid fa-heart full"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
