8nd Commit - Card of First Restaurant
Added the first card, with the animation of the hover

--- a/pages/index.html
+++ b/pages/index.html
@@ -43,7 +43,7 @@
                 Restaurants
             </h2>
             <div class="card new">
-                <a href="">
+                <a href="/pages/restaurant1.html">
                 <img src="../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du Goût">
                 <div class="card__footer">
                     <div class="card__description">
