--- a/pages/restaurant1.html
+++ b/pages/restaurant1.html
@@ -112,7 +112,21 @@
                     </div>
                 </div>
             </div>
+            <div class="menu__order">
+                <button class="btn">Commander</button>
+            </div>
         </div>
-    </main>    
+    </main>  
+    <footer class="footer">
+        <h2 class="footer--title">
+            ohmyfood
+        </h2>
+        <div class="footer__links">
+            <a href="#" class="footer__link"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+            <a href="#" class="footer__link"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
+            <a href="#" class="footer__link">Mentions Légales</a>
+            <a href="mailto:contact@anthony-marcato.fr" class="footer__link">Contact</a>
+        </div>
+    </footer>  
 </body>
 </html>
