10nd Commit - Added the animation
Added the fade-in animation for the menu pages

--- a/pages/restaurant1.html
+++ b/pages/restaurant1.html
@@ -26,9 +26,9 @@
                 </div>
             </div>
             <div class="menu__entree">
-            <h3 class="menu__subTitle">Entrées</h3>
+            <h3 class="menu__subTitle delay1">Entrées</h3>
             <div class="menu__items">
-                <div class="menu__item">
+                <div class="menu__item delay1">
                     <div class="menu__text">
                         <h4 class="menu__item--title">Fricassée d'escargot</h4>
                         <p class="menu__item--info">Au piment d'espelette</p>
@@ -36,7 +36,7 @@
                     <div class="menu__price">25€</div>
                     <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                 </div>
-                <div class="menu__item">
+                <div class="menu__item delay2">
                     <div class="menu__text">
                         <h4 class="menu__item--title">Foie gras de canard mi-cuit</h4>
                         <p class="menu__item--info">Et ses copeaux de truffe noire</p>
@@ -44,7 +44,7 @@
                     <div class="menu__price">35€</div>
                     <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                 </div>
-                <div class="menu__item">
+                <div class="menu__item delay3">
                     <div class="menu__text">
                         <h4 class="menu__item--title">Oeuf au plat</h4>
                         <p class="menu__item--info">Assaisonné à la truffe sur lit de caviar</p>
@@ -55,9 +55,9 @@
             </div>
             </div>
             <div class="menu__plats">
-                <h3 class="menu__subTitle">Plats</h3>
+                <h3 class="menu__subTitle delay2">Plats</h3>
                 <div class="menu__items">
-                    <div class="menu__item">
+                    <div class="menu__item delay4">
                         <div class="menu__text">
                             <h4 class="menu__item--title">Filet de boeuf aux herbes</h4>
                             <p class="menu__item--info">Accompagné de sa ribambelle de légumes</p>
@@ -65,7 +65,7 @@
                         <div class="menu__price">40€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                     </div>
-                    <div class="menu__item">
+                    <div class="menu__item delay5">
                         <div class="menu__text">
                             <h4 class="menu__item--title">Parmentier de queue de boeuf</h4>
                             <p class="menu__item--info">À la truffe noire sur sa purée de panais</p>
@@ -73,7 +73,7 @@
                         <div class="menu__price">35€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                     </div>
-                    <div class="menu__item">
+                    <div class="menu__item delay6">
                         <div class="menu__text">
                             <h4 class="menu__item--title">Filet de turbot</h4>
                             <p class="menu__item--info">Aux agrumes</p>
@@ -84,9 +84,9 @@
                 </div>
             </div>
             <div class="menu__desserts">
-                <h3 class="menu__subTitle">Desserts</h3>
+                <h3 class="menu__subTitle delay3">Desserts</h3>
                 <div class="menu__items">
-                    <div class="menu__item">
+                    <div class="menu__item delay7">
                         <div class="menu__text">
                             <h4 class="menu__item--title">Paris-Brest</h4>
                             <p class="menu__item--info">Revisité</p>
@@ -94,7 +94,7 @@
                         <div class="menu__price">18€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                     </div>
-                    <div class="menu__item">
+                    <div class="menu__item delay8">
                         <div class="menu__text">
                             <h4 class="menu__item--title">Macaron au chocolat d'exception </h4>
                             <p class="menu__item--info">Et glace à la vanille de Madagascar</p>
@@ -102,7 +102,7 @@
                         <div class="menu__price">22€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                     </div>
-                    <div class="menu__item">
+                    <div class="menu__item delay9">
                         <div class="menu__text">
                             <h4 class="menu__item--title">Mousse au chocolat </h4>
                             <p class="menu__item--info">Au piment d'Espelette et à la truffe noire</p>
