12nd Commit - Second Restaurant
Modified the page of the restaurant "La note enchantée" and fixed a wrong height for the image for fitting the background

--- a/pages/restaurant2.html
+++ b/pages/restaurant2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OhMyFood! - La Palette du Goût</title>
+    <title>OhMyFood! - La Note Enchantée</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/index.css">
 </head>
@@ -15,11 +15,11 @@
             <div class="navbar__brand">OhMyFood</div>
         </nav>
         <div class="background-image">
-            <img src="../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de fond la palette du goût">
+            <img src="../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de fond la palette du goût">
         </div>
         <div class="menu">
             <div class="menu__flexTitle">
-                <h2 class="menu__flexTitle--title">La palette du goût</h2>
+                <h2 class="menu__flexTitle--title">La note enchantée</h2>
                 <div class="menu__flexTitle--like">
                     <i class="fa-regular fa-heart empty"></i>
                     <i class="fa-solid fa-heart full"></i>
@@ -28,28 +28,36 @@
             <div class="menu__entree">
             <h3 class="menu__subTitle delay1">Entrées</h3>
             <div class="menu__items">
-                <div class="menu__item delay1">
+                <div class="menu__item transition1">
                     <div class="menu__text">
-                        <h4 class="menu__item--title">Fricassée d'escargot</h4>
-                        <p class="menu__item--info">Au piment d'espelette</p>
+                        <h4 class="menu__item--title">Ravioles de foie gras</h4>
+                        <p class="menu__item--info">Accompagnés de leur crème à la truffe</p>
                     </div>
                     <div class="menu__price">25€</div>
                     <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                 </div>
-                <div class="menu__item delay2">
+                <div class="menu__item transition2">
                     <div class="menu__text">
-                        <h4 class="menu__item--title">Foie gras de canard mi-cuit</h4>
-                        <p class="menu__item--info">Et ses copeaux de truffe noire</p>
+                        <h4 class="menu__item--title">Caviar osciètre</h4>
+                        <p class="menu__item--info">Sur blini à la farine de blé noir</p>
                     </div>
                     <div class="menu__price">35€</div>
                     <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                 </div>
-                <div class="menu__item delay3">
+                <div class="menu__item transition3">
                     <div class="menu__text">
-                        <h4 class="menu__item--title">Oeuf au plat</h4>
-                        <p class="menu__item--info">Assaisonné à la truffe sur lit de caviar</p>
+                        <h4 class="menu__item--title">Homard et espuma de potiron</h4>
+                        <p class="menu__item--info">Mariné aux zestes d'orange</p>
                     </div>
                     <div class="menu__price">20€</div>
+                    <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
+                </div>
+                <div class="menu__item transition4">
+                    <div class="menu__text">
+                        <h4 class="menu__item--title">Foie gras de canard cuit entier</h4>
+                        <p class="menu__item--info">Confiture de figue et pain toasté</p>
+                    </div>
+                    <div class="menu__price">35€</div>
                     <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                 </div>
             </div>
@@ -57,26 +65,26 @@
             <div class="menu__plats">
                 <h3 class="menu__subTitle delay2">Plats</h3>
                 <div class="menu__items">
-                    <div class="menu__item delay4">
+                    <div class="menu__item transition5">
                         <div class="menu__text">
-                            <h4 class="menu__item--title">Filet de boeuf aux herbes</h4>
-                            <p class="menu__item--info">Accompagné de sa ribambelle de légumes</p>
+                            <h4 class="menu__item--title">Noix de coquilles Saint-Jacques</h4>
+                            <p class="menu__item--info">Sur lit de purée de céleri-rave</p>
                         </div>
                         <div class="menu__price">40€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                     </div>
-                    <div class="menu__item delay5">
+                    <div class="menu__item transition6">
                         <div class="menu__text">
-                            <h4 class="menu__item--title">Parmentier de queue de boeuf</h4>
-                            <p class="menu__item--info">À la truffe noire sur sa purée de panais</p>
+                            <h4 class="menu__item--title">Langoustine poêlée</h4>
+                            <p class="menu__item--info">Purée de patate douce</p>
                         </div>
                         <div class="menu__price">35€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                     </div>
-                    <div class="menu__item delay6">
+                    <div class="menu__item transition7">
                         <div class="menu__text">
-                            <h4 class="menu__item--title">Filet de turbot</h4>
-                            <p class="menu__item--info">Aux agrumes</p>
+                            <h4 class="menu__item--title">Mijoté de queue de boeuf</h4>
+                            <p class="menu__item--info">Et riz sauvage aux zestes de citron</p>
                         </div>
                         <div class="menu__price">44€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
@@ -86,26 +94,26 @@
             <div class="menu__desserts">
                 <h3 class="menu__subTitle delay3">Desserts</h3>
                 <div class="menu__items">
-                    <div class="menu__item delay7">
+                    <div class="menu__item transition8">
                         <div class="menu__text">
-                            <h4 class="menu__item--title">Paris-Brest</h4>
-                            <p class="menu__item--info">Revisité</p>
+                            <h4 class="menu__item--title">Macaron noisette et chocolat</h4>
+                            <p class="menu__item--info">Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <div class="menu__price">18€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                     </div>
-                    <div class="menu__item delay8">
+                    <div class="menu__item transition9">
                         <div class="menu__text">
-                            <h4 class="menu__item--title">Macaron au chocolat d'exception </h4>
-                            <p class="menu__item--info">Et glace à la vanille de Madagascar</p>
+                            <h4 class="menu__item--title">Baba au rhum revisité</h4>
+                            <p class="menu__item--info">Avec son coulis de citron</p>
                         </div>
                         <div class="menu__price">22€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                     </div>
-                    <div class="menu__item delay9">
+                    <div class="menu__item transition10">
                         <div class="menu__text">
-                            <h4 class="menu__item--title">Mousse au chocolat </h4>
-                            <p class="menu__item--info">Au piment d'Espelette et à la truffe noire</p>
+                            <h4 class="menu__item--title">Tarte au citron meringuée</h4>
+                            <p class="menu__item--info">Destructurée</p>
                         </div>
                         <div class="menu__price">23€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
