--- a/pages/index.html
+++ b/pages/index.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="card new">
-                <a href="">
+                <a href="./restaurant2.html">
                 <img src="../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                 <div class="card__footer">
                     <div class="card__description">
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="card">
-                <a href="">
+                <a href="./restaurant3.html">
                 <img src="../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                 <div class="card__footer">
                     <div class="card__description">
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="card">
-                <a href="">
+                <a href="./restaurant4.html">
                 <img src="../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                 <div class="card__footer">
                     <div class="card__description">
