--- a/pages/restaurant3.html
+++ b/pages/restaurant3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OhMyFood! - La Palette du Goût</title>
+    <title>OhMyFood! - À la française</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/index.css">
 </head>
@@ -15,11 +15,11 @@
             <div class="navbar__brand">OhMyFood</div>
         </nav>
         <div class="background-image">
-            <img src="../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de fond la palette du goût">
+            <img src="../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de fond la palette du goût">
         </div>
         <div class="menu">
             <div class="menu__flexTitle">
-                <h2 class="menu__flexTitle--title">La palette du goût</h2>
+                <h2 class="menu__flexTitle--title">À la française</h2>
                 <div class="menu__flexTitle--like">
                     <i class="fa-regular fa-heart empty"></i>
                     <i class="fa-solid fa-heart full"></i>
@@ -30,24 +30,24 @@
             <div class="menu__items">
                 <div class="menu__item delay1">
                     <div class="menu__text">
-                        <h4 class="menu__item--title">Fricassée d'escargot</h4>
-                        <p class="menu__item--info">Au piment d'espelette</p>
+                        <h4 class="menu__item--title">Tartare de poulpe acidulé</h4>
+                        <p class="menu__item--info">Aux zestes d'orange</p>
                     </div>
                     <div class="menu__price">25€</div>
                     <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                 </div>
                 <div class="menu__item delay2">
                     <div class="menu__text">
-                        <h4 class="menu__item--title">Foie gras de canard mi-cuit</h4>
-                        <p class="menu__item--info">Et ses copeaux de truffe noire</p>
+                        <h4 class="menu__item--title">Velouté de légumes d'antan</h4>
+                        <p class="menu__item--info">Carotte, panais, topinambour</p>
                     </div>
                     <div class="menu__price">35€</div>
                     <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                 </div>
                 <div class="menu__item delay3">
                     <div class="menu__text">
-                        <h4 class="menu__item--title">Oeuf au plat</h4>
-                        <p class="menu__item--info">Assaisonné à la truffe sur lit de caviar</p>
+                        <h4 class="menu__item--title">Soupe à l'oignon</h4>
+                        <p class="menu__item--info">Revisitée</p>
                     </div>
                     <div class="menu__price">20€</div>
                     <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
@@ -59,24 +59,24 @@
                 <div class="menu__items">
                     <div class="menu__item delay4">
                         <div class="menu__text">
-                            <h4 class="menu__item--title">Filet de boeuf aux herbes</h4>
-                            <p class="menu__item--info">Accompagné de sa ribambelle de légumes</p>
+                            <h4 class="menu__item--title">Coquilles Saint-Jacques</h4>
+                            <p class="menu__item--info">Accompagnées d'une purée de panais</p>
                         </div>
                         <div class="menu__price">40€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                     </div>
                     <div class="menu__item delay5">
                         <div class="menu__text">
-                            <h4 class="menu__item--title">Parmentier de queue de boeuf</h4>
-                            <p class="menu__item--info">À la truffe noire sur sa purée de panais</p>
+                            <h4 class="menu__item--title">Magret de canard</h4>
+                            <p class="menu__item--info">Et parmentier de pommes de terre</p>
                         </div>
                         <div class="menu__price">35€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                     </div>
                     <div class="menu__item delay6">
                         <div class="menu__text">
-                            <h4 class="menu__item--title">Filet de turbot</h4>
-                            <p class="menu__item--info">Aux agrumes</p>
+                            <h4 class="menu__item--title">Pigeonneau d’Ille-et-Vilaine</h4>
+                            <p class="menu__item--info">Sur son lit de gnocchis aux légumes</p>
                         </div>
                         <div class="menu__price">44€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
@@ -88,24 +88,24 @@
                 <div class="menu__items">
                     <div class="menu__item delay7">
                         <div class="menu__text">
-                            <h4 class="menu__item--title">Paris-Brest</h4>
-                            <p class="menu__item--info">Revisité</p>
+                            <h4 class="menu__item--title">Pétales de violettes glacés</h4>
+                            <p class="menu__item--info">Et purée de noisettes</p>
                         </div>
                         <div class="menu__price">18€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                     </div>
                     <div class="menu__item delay8">
                         <div class="menu__text">
-                            <h4 class="menu__item--title">Macaron au chocolat d'exception </h4>
-                            <p class="menu__item--info">Et glace à la vanille de Madagascar</p>
+                            <h4 class="menu__item--title">Fondant au chocolat</h4>
+                            <p class="menu__item--info">Revisité</p>
                         </div>
                         <div class="menu__price">22€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
                     </div>
                     <div class="menu__item delay9">
                         <div class="menu__text">
-                            <h4 class="menu__item--title">Mousse au chocolat </h4>
-                            <p class="menu__item--info">Au piment d'Espelette et à la truffe noire</p>
+                            <h4 class="menu__item--title">Millefeuille croustillant</h4>
+                            <p class="menu__item--info">Myrtilles et pâte d’amande</p>
                         </div>
                         <div class="menu__price">23€</div>
                         <div class="menu__checked"><i class="fa-solid fa-check"></i></div>
