15nd Commit - Validator
Changes due to validator W3C problems

--- a/pages/index.html
+++ b/pages/index.html
@@ -44,18 +44,18 @@
             </h2>
             <div class="card new">
                 <a href="/pages/restaurant1.html">
-                <img src="../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du Goût">
+                    <img src="../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du Goût" />
                 <div class="card__footer">
                     <div class="card__description">
                         <h3 class="card__description--title">La palette du goût</h3>
                         <p class="card__description--info">Ménilmontant</p>
-                    </div>
-                </a>
+                    </div>               
                     <div class="card__like">
                         <i class="fa-regular fa-heart empty"></i>
                         <i class="fa-solid fa-heart full"></i>
                     </div>
                 </div>
+            </a>
             </div>
             <div class="card new">
                 <a href="./restaurant2.html">
@@ -65,12 +65,12 @@
                         <h3 class="card__description--title">La note enchantée</h3>
                         <p class="card__description--info">Charonne</p>
                     </div>
-                </a>
                     <div class="card__like">
                         <i class="fa-regular fa-heart empty"></i>
                         <i class="fa-solid fa-heart full"></i>
                     </div>
                 </div>
+            </a>
             </div>
             <div class="card">
                 <a href="./restaurant3.html">
@@ -80,12 +80,12 @@
                         <h3 class="card__description--title">À la française</h3>
                         <p class="card__description--info">Cité Rouge</p>
                     </div>
-                </a>
                     <div class="card__like">
                         <i class="fa-regular fa-heart empty"></i>
                         <i class="fa-solid fa-heart full"></i>
                     </div>
                 </div>
+            </a>
             </div>
             <div class="card">
                 <a href="./restaurant4.html">
@@ -95,12 +95,12 @@
                         <h3 class="card__description--title">Le délice des sens</h3>
                         <p class="card__description--info">Folie-Méricourt</p>
                     </div>
-                </a>
                     <div class="card__like">
                         <i class="fa-regular fa-heart empty"></i>
                         <i class="fa-solid fa-heart full"></i>
                     </div>
                 </div>
+            </a>
             </div>
         </div>
     </main>
