--- a/pages/restaurant3.html
+++ b/pages/restaurant3.html
@@ -15,7 +15,7 @@
             <div class="navbar__brand">OhMyFood</div>
         </nav>
         <div class="background-image">
-            <img src="../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de fond la palette du goût">
+            <img src="../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de fond la palette du goût" />
         </div>
         <div class="menu">
             <div class="menu__flexTitle">
