--- a/pages/restaurant3.html
+++ b/pages/restaurant3.html
@@ -11,7 +11,7 @@
 <body>
     <main class="secondPage">
         <nav class="navbar">
-            <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="/index.html"><i class="fa-solid fa-arrow-left"></i></a>
             <div class="navbar__brand">OhMyFood</div>
         </nav>
         <div class="background-image">
