--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </h2>
             <div class="card new">
                 <a href="/pages/restaurant1.html">
-                    <img src="../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du Goût" />
+                    <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du Goût" />
                 <div class="card__footer">
                     <div class="card__description">
                         <h3 class="card__description--title">La palette du goût</h3>
@@ -59,7 +59,7 @@
             </div>
             <div class="card new">
                 <a href="/pages/restaurant2.html">
-                <img src="../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                <img src="/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                 <div class="card__footer">
                     <div class="card__description">
                         <h3 class="card__description--title">La note enchantée</h3>
@@ -74,7 +74,7 @@
             </div>
             <div class="card">
                 <a href="/pages/restaurant3.html">
-                <img src="../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                <img src="/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                 <div class="card__footer">
                     <div class="card__description">
                         <h3 class="card__description--title">À la française</h3>
@@ -89,7 +89,7 @@
             </div>
             <div class="card">
                 <a href="/pages/restaurant4.html">
-                <img src="../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                <img src="/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                 <div class="card__footer">
                     <div class="card__description">
                         <h3 class="card__description--title">Le délice des sens</h3>
