--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OhMyFood! - Accueil</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div class="pre-load">
@@ -43,7 +43,7 @@
                 Restaurants
             </h2>
             <div class="card new">
-                <a href="/pages/restaurant1.html">
+                <a href="pages/restaurant1.html">
                     <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du Goût" />
                 <div class="card__footer">
                     <div class="card__description">
@@ -58,8 +58,8 @@
             </a>
             </div>
             <div class="card new">
-                <a href="/pages/restaurant2.html">
-                <img src="/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                <a href="pages/restaurant2.html">
+                <img src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                 <div class="card__footer">
                     <div class="card__description">
                         <h3 class="card__description--title">La note enchantée</h3>
@@ -73,8 +73,8 @@
             </a>
             </div>
             <div class="card">
-                <a href="/pages/restaurant3.html">
-                <img src="/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                <a href="pages/restaurant3.html">
+                <img src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                 <div class="card__footer">
                     <div class="card__description">
                         <h3 class="card__description--title">À la française</h3>
@@ -88,8 +88,8 @@
             </a>
             </div>
             <div class="card">
-                <a href="/pages/restaurant4.html">
-                <img src="/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                <a href="pages/restaurant4.html">
+                <img src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                 <div class="card__footer">
                     <div class="card__description">
                         <h3 class="card__description--title">Le délice des sens</h3>
