Change location after mentoring
Change the location part to input

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
         <div class="location">
             <i class="fa-solid fa-location-dot"></i>
-            Paris, Belleville
+            <input type="text" name="location" class="location--input" placeholder="Paris, Belleville">
         </div>
         <div class="order_menu">
             <h1 class="order_menu--title">Réservez le menu qui vous convient</h1>
