Push after exam
Modification for semantics and for loader

--- a/index.html
+++ b/index.html
@@ -20,25 +20,27 @@
         </div>
     </div>
     <main class="mainpage">
+        <header>
         <nav class="navbar">
             <div class="navbar__brand">OhMyFood</div>
         </nav>
-        <div class="location">
+        </header>
+        <section class="location">
             <i class="fa-solid fa-location-dot"></i>
             <input type="text" name="location" class="location--input" placeholder="Paris, Belleville">
-        </div>
-        <div class="order_menu">
+        </section>
+        <section class="order_menu">
             <h1 class="order_menu--title">Réservez le menu qui vous convient</h1>
             <h3 class="order_menu--secondTitle">Découvrez des restaurants d'exception, séléctionnés par nos soins.</h3>
             <button class="btn">Explorez nos restaurants</button>
-        </div>
-        <div class="steps">
+        </section>
+        <section class="steps">
             <h2 class="steps--title">Fonctionnement</h2>
             <div class="step"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</div>
             <div class="step"><i class="fa-solid fa-list"></i>Composez votre menu</div>
             <div class="step"><i class="fa-solid fa-store"></i>Dégustez au restaurant</div>
-        </div>
-        <div class="restaurants">
+        </section>
+        <section class="restaurants">
             <h2 class="restaurants--title">
                 Restaurants
             </h2>
@@ -102,9 +104,9 @@
                 </div>
             </a>
             </div>
-        </div>
+        </section>
     </main>
-    <footer class="footer">
+    <footer class="footer footer__mainpage">
         <h2 class="footer--title">
             ohmyfood
         </h2>
