--- a/pages/restaurant4.html
+++ b/pages/restaurant4.html
@@ -10,14 +10,16 @@
 </head>
 <body>
     <main class="secondPage">
+        <header>
         <nav class="navbar">
             <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
             <div class="navbar__brand">OhMyFood</div>
         </nav>
+        </header>
         <div class="background-image">
             <img src="../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de fond la palette du goût">
         </div>
-        <div class="menu">
+        <section class="menu">
             <div class="menu__flexTitle">
                 <h2 class="menu__flexTitle--title">Le délice des sens</h2>
                 <div class="menu__flexTitle--like">
@@ -115,7 +117,7 @@
             <div class="menu__order">
                 <button class="btn">Commander</button>
             </div>
-        </div>
+        </section>
     </main>  
     <footer class="footer">
         <h2 class="footer--title">
